<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_vote_create"
            android:icon="@drawable/ic_menu_vote"
            android:title="@string/menu_vote_create" />
        <item
            android:id="@+id/nav_add_party"
            android:icon="@drawable/ic_menu_add_party"
            android:title="@string/menu_add_party" />
        <item
            android:id="@+id/nav_remove_party"
            android:icon="@drawable/ic_menu_remove_party"
            android:title="@string/menu_remove_party" />
    </group>
</menu>
