<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.vote.VoteFragment" >

    <TextView
        android:id="@+id/text_vote_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153"
        tools:text="@string/vote_title"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/text_vote_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272"
        android:gravity="center_horizontal" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:columnCount="3"
        android:rowCount="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_vote_question"
        app:layout_constraintVertical_bias="0.505"
        tools:layout_editor_absoluteX="67dp"
        android:layout_marginLeft="30dp">


        <Button
            android:id="@+id/button_yes"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/answer_yes"
            app:cornerRadius="50dip"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/button_no"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:text="@string/answer_no"
            app:cornerRadius="50dip"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/button_white"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/answer_white"
            app:cornerRadius="50dip" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>